src/test/deca/codegen/invalid/testDeborFloat3.ass
; start main program
	TSTO #4
	BOV stack_overflow_error
	ADDSP #2
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
	ADDSP #1
	LOAD #0x1.f4p9, R2
	STORE R2, 3(GB)
; Beginning of main instructions:
	BRA E_Cond1
E_Debut1:
	PUSH R2
	LOAD 3(GB), R2
	ADD 3(GB), R2
	BOV ArithFloat_Error
	LOAD R2, R1
	POP R2
	STORE R1, 3(GB)
	LOAD 3(GB), R1
E_Cond1:
	BRA E_Debut1
	HALT
stack_overflow_error:
	WSTR "Error: Stack Overflow"
	WNL
	ERROR
io_error:
	WSTR "Error: Input/Output error"
	WNL
	ERROR
ArithFloat_Error:
	WSTR "Error: Débordement arithmétique sur flottants"
	WNL
	ERROR
ZeroDivision_Error:
	WSTR "Error: Division entière par 0"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement de null"
	WNL
	ERROR
tas_plein:
	WSTR "Erreur : heap_over_flow"
	WNL
	ERROR
code.Object.equals:
	RTS
init.object:
	RTS
debut.io:
	LOAD -3(LB), R2
	LOAD -2(LB), R0
	LOAD 0(R0), R0
	CMP R0, R2
	BNE sinon.io.1
	LOAD #1, R2
	RTS
sinon.io.1:
	LOAD 0(R0), R1
	CMP #null, R1
	BNE sinon.io.2
	LOAD #0, R2
	RTS
sinon.io.2:
	LOAD -3(LB), R2
	LEA 0(R0), R0
	ADDSP #2
	STORE R0, 0(SP)
	STORE R2, -1(SP)
	BSR debut.io
	SUBSP #2
	RTS
	ERROR
; end main program
